# py2rust

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  REUSE-DEBT.md  REUSE.toml  py2rust.code-workspace  pyproject.toml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: labeler.yml
.github/workflows/: ci.yml  fleet-ci.yml  fleet-security.yml  pr-labeler.yml  release.yml  test.yml
crates/py2rust/: Cargo.toml
crates/py2rust-core/: Cargo.toml
crates/py2rust-core/fixtures/: class_only.py  lambda_mod.py  meta_exec.py  mixed.py  simple_fn.py  try_except.py
crates/py2rust-core/src/: batch.rs  dispatch.rs  emit.rs  gap.rs  lib.rs  map.rs  parse.rs  source_loc.rs
crates/py2rust-core/tests/: corpus_readme.rs  invariant.rs
crates/py2rust/src/: main.rs
docs/: PORT_FROM_MYCELIUM.md  ROADMAP.md
docs/tero-index/: INDEX.md  MANIFEST.toml  index.json
research/: ASSESSMENT_mycelium_transpile.md  transpile-vet-SKILL.md
research/mycelium-transpile-snapshot/: BUILD.md  Cargo.toml  PROVENANCE.md  README.md
research/mycelium-transpile-snapshot/src/: batch.rs  emit.rs  gap.rs  lib.rs  map.rs  prim_map.rs  remap.rs  reserved.rs  symtab.rs  transpile.rs  type_map.rs  vet.rs  visit.rs
research/mycelium-transpile-snapshot/src/emit/calls/: bare.rs  mod.rs  qualified_assoc.rs
research/mycelium-transpile-snapshot/src/emit/derives/: clone_copy.rs  eq.rs  hash.rs  init.rs  mod.rs  ord.rs  show.rs
research/mycelium-transpile-snapshot/src/emit/macros/: mod.rs  write_format.rs
research/mycelium-transpile-snapshot/src/emit/patterns/: mod.rs  or_pat.rs  struct_variant_pat.rs  tuple_pat.rs
research/mycelium-transpile-snapshot/src/tests/: batch.rs  combinator.rs  corpus.rs  diff.rs  emit.rs  gap.rs  invariant.rs  map.rs  mod.rs  mut_thread.rs  prim_map.rs  remap.rs  reserved.rs  slice_type.rs  symtab.rs  taxonomy.rs  transpile.rs  type_map.rs  valid_ident.rs  vet.rs  write_format.rs
research/mycelium-transpile-snapshot/tests/: guard_hole_census.rs
scripts/: check.sh
src/py2rust/: README.md  __init__.py  cli.py
tests/: __init__.py  test_cli.py
(+1 files in other folders)
