[project]
name = "py2rust"
version = "0.1.0"
description = "Python to Rust transpiler and code conversion assistant"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "astor>=0.8.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py2rust"]

[project.scripts]
py2rust = "py2rust.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "types-PyYAML>=6.0.0",
    "pre-commit>=3.0.0",
]