[package]
name = "py2rust-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Python → Rust transpiler library (parse, gap, dispatch, emit)"
readme = "../../README.md"

[dependencies]
anyhow.workspace = true
rustpython-parser.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
